fixed IBM, fixed icons

--- a/index.html
+++ b/index.html
@@ -251,12 +251,12 @@
 	   				</div>
 
 	   				<div class="timeline-content">
-	   					<h4>UXP Systems, an Amdocs Company</h4>
-	   					<p>• Effectively used Mongo, Express, and NodeJS to implement the back-end of a conversational banking mobile app POC.<br?
-						   • Built the front-end of an internal web application using ES6 JavaScript, React, Redux, and CSS3 as per design specifications.<br?
-						   • Successfully refactored outdated UI web elements using React’s Higher Order Components (HOC) and CSS stylesheets.<br?
-						   • Support in the work of an augmented reality iOS app involving object sharing between devices using AR Cloud and Swift.<br?
-						   • Made positive impact on stakeholder demos and agile workflow by encouraging daily srums and retrospectives each week.<br?
+	   					<h4>IBM</h4>
+	   					<p>• Effectively used Mongo, Express, and NodeJS to implement the back-end of a conversational banking mobile app POC.<br>
+						   • Built the front-end of an internal web application using ES6 JavaScript, React, Redux, and CSS3 as per design specifications.<br>
+						   • Successfully refactored outdated UI web elements using React’s Higher Order Components (HOC) and CSS stylesheets.<br>
+						   • Support in the work of an augmented reality iOS app involving object sharing between devices using AR Cloud and Swift.<br>
+						   • Made positive impact on stakeholder demos and agile workflow by encouraging daily srums and retrospectives each week.<br>
 						</p>
 	   				</div>
 
@@ -373,7 +373,7 @@
 				<div class="timeline-block">
 
 	   				<div class="timeline-ico">
-	   					<i class="fa fa-hockey-sticks"></i>
+	   					<i class="fa fa-cogs"></i>
 	   				</div>
 
 	   				<div class="timeline-header">
@@ -433,7 +433,7 @@
    				<div class="timeline-block">
 
 	   				<div class="timeline-ico">
-	   					<i class="fa fa-award"></i>
+	   					<i class="fa fa-trophy"></i>
 	   				</div>
 
 	   				<div class="timeline-header">
@@ -451,7 +451,7 @@
 	   			<div class="timeline-block">
 
 	   				<div class="timeline-ico">
-	   					<i class="fa fa-award"></i>
+	   					<i class="fa fa-trophy"></i>
 	   				</div>
 
 	   				<div class="timeline-header">
@@ -469,7 +469,7 @@
 	   			<div class="timeline-block">
 
 	   				<div class="timeline-ico">
-	   					<i class="fa fa-award"></i>
+	   					<i class="fa fa-trophy"></i>
 	   				</div>
 
 	   				<div class="timeline-header">
