fixed skill progress

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 			<div class="col-six tab-full">
 
 				<h3>Skills</h3>
-				<p>Some things I tell myself I am good at.</p>
+				<!-- <p>Some things I tell myself I am good at.</p> -->
 
 				<ul class="skill-bars">
 					<li>
@@ -174,11 +174,11 @@
 						<strong>JavaScript</strong>
 					</li>
 					<li>
-						<div class="progress percent60"><span>80%</span></div>
+						<div class="progress percent80"><span>80%</span></div>
 						<strong>Java</strong>
 					</li>
 					<li>
-						<div class="progress percent75"><span>60%</span></div>
+						<div class="progress percent60"><span>60%</span></div>
 						<strong>C++</strong>
 					</li>
 					<li>
@@ -186,7 +186,7 @@
 						<strong>SQL</strong>
 					</li>
 					<li>
-						<div class="progress percent70"><span>80%</span></div>
+						<div class="progress percent80"><span>80%</span></div>
 						<strong>AWS</strong>
 					</li>
 					<li>
