switched to lowercase

--- a/index.html
+++ b/index.html
@@ -106,15 +106,15 @@
 			<div class="col-twelve">
 
 				<h5>About</h5>
-				<h1>Let me introduce myself.</h1>
+				<h1>my tinder profile.</h1>
 
 				<div class="intro-info">
 					<img src="images/IMG_6196.jpg" alt="Profile Picture">
 
-					<p class="lead">"Everything in the world has beauty, but not everyone can see."<br>
-						Born in Seoul, South Korea. Native of Toronto.<br>
-						Love all Toronto sports. Love all things tech.<br>
-						Innovator | Creator | Developer | Designer
+					<p class="lead">"everything in the world has beauty, but not everyone can see."<br>
+						born in seoul, south korea. native of toronto.<br>
+						love all toronto sports. love all things tech.<br>
+						innovator | creator | developer | designer
 					</p>
 
 				</div>
@@ -134,18 +134,18 @@
 					</li>
 					<li>
 						<strong>Birth Date:</strong>
-						<span>October 15, 1997</span>
+						<span>october 15, 1997</span>
 					</li>
 					<li>
 						<strong>Education:</strong>
-						<span>Candidate for BaSc, Honours, Computer Engineering at the University of Waterloo <br>
-							Expected April 2020<br>
-							President's Scholarship
+						<span>candidate for BaSc, honours, computer engineering at the university of waterloo <br>
+							expected april 2020<br>
+							president's scholarship
 						</span>
 					</li>
 					<li>
 						<strong>Specialty:</strong>
-						<span>Infrastructure, Back-end</span>
+						<span>infrastructure; back-end</span>
 					</li>
 					<li>
 						<strong>Email:</strong>
@@ -153,7 +153,7 @@
 					</li>
 					<li>
 						<strong>Linkedin:</strong>
-						<span>matthewkim919</span>
+						<span>linkedin/in/matthewkim919</span>
 					</li>
 				</ul> <!-- /info-list -->
 
@@ -217,7 +217,7 @@
 			<div class="col-twelve">
 
 				<h5>Resume</h5>
-				<h1>Some things I've done.</h1>
+				<h1>some things i'm proud of.</h1>
 
 				<!--<p class="lead"></p>-->
 
@@ -226,7 +226,7 @@
 
 		<div class="row resume-timeline">
 			<div class="col-twelve resume-header">
-				<h2>Work Experience</h2>
+				<h2>work experience</h2>
 			</div> <!-- /resume-header -->
 
 			<div class="col-twelve">
@@ -237,12 +237,12 @@
 						</div>
 
 						<div class="timeline-header">
-							<h3>Sumo Logic</h3>
-							<p>Sept. 2019 - Dec. 2019</p>
+							<h3>sumo logic</h3>
+							<p>sept. 2019 - dec. 2019</p>
 						</div>
 
 						<div class="timeline-content">
-							<h4>Software Engineer, Infrastructure</h4>
+							<h4>software engineer, infrastructure</h4>
 							<p>• Created an end-to-end reusable, distributed, Kubernetes-based load-testing tool for HTTP APIs.<br>
 								• Load generated using an open source Golang spiking library based on Vegeta, modified to send expected
 								log formats.<br>
@@ -266,12 +266,12 @@
 						</div>
 
 						<div class="timeline-header">
-							<h3>IBM Canada</h3>
-							<p>Sept. 2018 - Dec. 2018</p>
+							<h3>ibm canada</h3>
+							<p>sept. 2018 - dec. 2018</p>
 						</div>
 
 						<div class="timeline-content">
-							<h4>Software Engineer, Full Stack</h4>
+							<h4>software engineer, full stack</h4>
 							<p>• Effectively used Mongo, Express, and NodeJS to implement the back-end of a conversational banking
 								mobile app POC.<br>
 								• Built the front-end of an internal web application using ES6 JavaScript, React, Redux, and CSS3 as per
@@ -292,12 +292,12 @@
 						</div>
 
 						<div class="timeline-header">
-							<h3>UXP Systems, an Amdocs Company</h3>
-							<p>Jan. 2018 - Apr. 2018</p>
+							<h3>uxp systems, an amdocs company</h3>
+							<p>jan. 2018 - apr. 2018</p>
 						</div>
 
 						<div class="timeline-content">
-							<h4>Software Developer</h4>
+							<h4>software developer</h4>
 							<p>• Independently designed and developed Java / Groovy classes on the enterprise platform using Spring
 								and IntelliJ IDEA.<br>
 								• Strong understanding of JSON and XML through Spring integration to create REST APIs. Worked with
@@ -318,12 +318,12 @@
 						</div>
 
 						<div class="timeline-header">
-							<h3>PointClickCare</h3>
-							<p>May. 2017 - Aug. 2017</p>
+							<h3>pointclickcare</h3>
+							<p>may. 2017 - aug. 2017</p>
 						</div>
 
 						<div class="timeline-content">
-							<h4>Java Developer</h4>
+							<h4>java developer</h4>
 							<p>• Successfully wrapped a Drools Rule Engine into a Spring Boot REST API web service with over 200 rules
 								and a sample client API.<br>
 								• Incorporated basic HTTP authentication and support for both JSON and XML input/output using Spring
@@ -344,14 +344,14 @@
 						</div>
 
 						<div class="timeline-header">
-							<h3>PointClickCare</h3>
-							<p>Sep. 2016 - Dec. 2016<br>
-								Jan. 2016 - Apr. 2016
+							<h3>pointclickcare</h3>
+							<p>sep. 2016 - dec. 2016<br>
+								jan. 2016 - apr. 2016
 							</p>
 						</div>
 
 						<div class="timeline-content">
-							<h4>Automation Engineer</h4>
+							<h4>automation engineer</h4>
 							<p>• Thoroughly involved in test automation which includes refactoring high level Java classes and page
 								tests in Spring and Selenium, resulting in approximately 300 files committed and over 30 000 lines of
 								code changed.<br>
@@ -372,12 +372,12 @@
 						</div>
 
 						<div class="timeline-header">
-							<h3>Spot Cinema Inc.</h3>
-							<p>Jul. 2014 - Aug. 2014</p>
+							<h3>spot cinema inc.</h3>
+							<p>jul. 2014 - aug. 2014</p>
 						</div>
 
 						<div class="timeline-content">
-							<h4>Website Developer</h4>
+							<h4>website developer</h4>
 							<p>• Successfully optimized company website up to 50% by combining sprites, browser caching, and defer
 								parsing.<br>
 								• Increased the Search Engine Optimization by defining key words, adding appropriate page URLs, and
@@ -392,7 +392,7 @@
 
 		<div class="row resume-timeline">
 			<div class="col-twelve resume-header">
-				<h2>Projects</h2>
+				<h2>projects</h2>
 			</div> <!-- /resume-header -->
 
 			<div class="col-twelve">
@@ -404,12 +404,12 @@
 						</div>
 
 						<div class="timeline-header">
-							<h3>Data Scraping</h3>
+							<h3>data scraping</h3>
 							<p>2018</p>
 						</div>
 
 						<div class="timeline-content">
-							<h4>NHL Play by Play Data Scraper</h4>
+							<h4>nhl play by play data scraper</h4>
 							<p>• A back-end application that takes play by play data from the NHL’s public stats API using JavaScript
 								and NodeJS.<br>
 								• Commands are executed through Powershell and scrapes JSON data into .csv format to easily analyze
@@ -427,12 +427,12 @@
 						</div>
 
 						<div class="timeline-header">
-							<h3>Video Game Design</h3>
+							<h3>video game design</h3>
 							<p>2013 - 2015</p>
 						</div>
 
 						<div class="timeline-content">
-							<h4>GameMaker Studio, Construct 2</h4>
+							<h4>gamemaker studio, construct 2</h4>
 							<p>• Effectively used game creation systems such as GameMaker Studio and Construct 2 to design a 2D
 								side-scrolling platform.<br>
 								• Gained expertise in video game design presentation and project life cycles through alpha, beta, and
@@ -447,7 +447,7 @@
 
 		<div class="row resume-timeline">
 			<div class="col-twelve resume-header">
-				<h2>Achievements</h2>
+				<h2>achievements</h2>
 			</div> <!-- /resume-header -->
 
 			<div class="col-twelve">
@@ -459,12 +459,12 @@
 						</div>
 
 						<div class="timeline-header">
-							<h3>Ontario Skills Robotics</h3>
+							<h3>ontario skills robotics</h3>
 							<p>2015</p>
 						</div>
 
 						<div class="timeline-content">
-							<h4>1st Place</h4>
+							<h4>1st place</h4>
 							<p>• Built an Arduino robot that retrieves miscellaneous objects and places them on a tall pyramid.</p>
 						</div>
 					</div> <!-- /timeline-block -->
@@ -475,12 +475,12 @@
 						</div>
 
 						<div class="timeline-header">
-							<h3>Skills Canada Robotics</h3>
+							<h3>skills canada robotics</h3>
 							<p>2014</p>
 						</div>
 
 						<div class="timeline-content">
-							<h4>Finalist</h4>
+							<h4>finalist</h4>
 							<p>• Built an Arduino robot that traces a black line and retrieves a pale. Tested for speed & accuracy.
 							</p>
 						</div>
@@ -492,12 +492,12 @@
 						</div>
 
 						<div class="timeline-header">
-							<h3>FIRST Robotics</h3>
+							<h3>first robotics</h3>
 							<p>2013</p>
 						</div>
 
 						<div class="timeline-content">
-							<h4>Finalist</h4>
+							<h4>finalist</h4>
 							<p>• Built an Arduino and C++ robot that accurately shoots Frisbee discs using jaguars.</p>
 						</div>
 					</div> <!-- /timeline-block -->
@@ -508,12 +508,12 @@
 						</div>
 
 						<div class="timeline-header">
-							<h3>Science Olympics, Engineering</h3>
+							<h3>science olympics, engineering</h3>
 							<p>2014</p>
 						</div>
 
 						<div class="timeline-content">
-							<h4>1st Place</h4>
+							<h4>1st place</h4>
 							<p>• Designed a popsicle stick bridge within a given time frame to shoot at a target that was purely
 								tested for strength, and accuracy.</p>
 						</div>
@@ -525,12 +525,12 @@
 						</div>
 
 						<div class="timeline-header">
-							<h3>Science Olympics, Engineering</h3>
+							<h3>science olympics, engineering</h3>
 							<p>2013</p>
 						</div>
 
 						<div class="timeline-content">
-							<h4>3rd Place</h4>
+							<h4>3rd place</h4>
 							<p>• Constructed a cardboard catapult to launch items. Emphasis on accuracy, design, and power.</p>
 						</div>
 					</div> <!-- /timeline-block -->
@@ -1015,7 +1015,7 @@
 			<div class="col-twelve">
 
 				<h5>Contact</h5>
-				<h1>I'd love to hear from you.</h1>
+				<h1>if u want to chat.</h1>
 
 				<p class="lead"></p>
 
@@ -1028,14 +1028,14 @@
 				<form name="contactForm" id="contactForm" method="post" action="">
 					<fieldset>
 						<div class="form-field">
-							<input name="contactName" type="text" id="contactName" placeholder="Name" value="" minlength="2"
+							<input name="contactName" type="text" id="contactName" placeholder="name" value="" minlength="2"
 								required="">
 						</div>
 						<div class="form-field">
-							<input name="contactEmail" type="email" id="contactEmail" placeholder="Email" value="" required="">
+							<input name="contactEmail" type="email" id="contactEmail" placeholder="email" value="" required="">
 						</div>
 						<div class="form-field">
-							<input name="contactSubject" type="text" id="contactSubject" placeholder="Subject" value="">
+							<input name="contactSubject" type="text" id="contactSubject" placeholder="subject" value="">
 						</div>
 						<div class="form-field">
 							<textarea name="contactMessage" id="contactMessage" placeholder="message" rows="10" cols="50"
@@ -1059,7 +1059,7 @@
 				<div id="message-warning"></div>
 				<!-- contact-success -->
 				<div id="message-success">
-					<i class="fa fa-check"></i>Your message was sent, thank you!<br>
+					<i class="fa fa-check"></i>your message was sent, thank you!<br>
 				</div>
 
 			</div> <!-- /col-twelve -->
@@ -1074,7 +1074,7 @@
 
 				<h5>Where to find me</h5>
 				<p>
-					330 Philip St.<br>
+					330 Phillip St.<br>
 					Waterloo, ON<br>
 					N2L 3W9
 				</p>
@@ -1103,7 +1103,7 @@
 
 				<h5>Call Me At</h5>
 
-				<p>Mobile: (+1) 647-707-1683</p>
+				<p>mobile: (+1) 647-707-1683</p>
 
 			</div>
 			
