changed profile pic and bg

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 				<h1>my tinder profile.</h1>
 
 				<div class="intro-info">
-					<img src="images/IMG_6196.jpg" alt="Profile Picture">
+					<img src="images/profile_pic.jpg" alt="Profile Picture">
 
 					<p class="lead">"everything in the world has beauty, but not everyone can see."<br>
 						born in seoul, south korea. native of toronto.<br>
