fixed lowercase, fixed profile pic, fixed main.css errors

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 					<h1>Matthew Kim</h1>
 
 					<p class="intro-position">
-						<span>4B computer engineering</span>
+						<span>4b computer engineering</span>
 						<span>software developer</span>
 					</p>
 
@@ -105,11 +105,11 @@
 		<div class="row section-intro">
 			<div class="col-twelve">
 
-				<h5>About</h5>
+				<h5>about</h5>
 				<h1>my tinder profile.</h1>
 
 				<div class="intro-info">
-					<img src="images/profile_pic.jpg" alt="Profile Picture">
+					<img src="images/profile_pic.jpg" alt="profile picture">
 
 					<p class="lead">"everything in the world has beauty, but not everyone can see."<br>
 						born in seoul, south korea. native of toronto.<br>
@@ -124,35 +124,36 @@
 		<div class="row about-content">
 			<div class="col-six tab-full">
 
-				<h3>Profile</h3>
+				<h3>profile</h3>
 				<!--<p></p>-->
 
 				<ul class="info-list">
 					<li>
-						<strong>Full Name:</strong>
+						<strong>full name:</strong>
 						<span>Matthew Minsung Kim</span>
 					</li>
 					<li>
-						<strong>Birth Date:</strong>
+						<strong>birth date:</strong>
 						<span>october 15, 1997</span>
 					</li>
 					<li>
-						<strong>Education:</strong>
-						<span>candidate for BaSc, honours, computer engineering at the university of waterloo <br>
+						<strong>education:</strong>
+						<span>candidate for BaSc, honours, computer engineering<br> 
+							university of waterloo<br>
 							expected april 2020<br>
 							president's scholarship
 						</span>
 					</li>
 					<li>
-						<strong>Specialty:</strong>
+						<strong>specialty:</strong>
 						<span>infrastructure; back-end</span>
 					</li>
 					<li>
-						<strong>Email:</strong>
+						<strong>email:</strong>
 						<span>matthew.kim919@gmail.com</span>
 					</li>
 					<li>
-						<strong>Linkedin:</strong>
+						<strong>linkedin:</strong>
 						<span>linkedin/in/matthewkim919</span>
 					</li>
 				</ul> <!-- /info-list -->
@@ -161,37 +162,37 @@
 
 			<div class="col-six tab-full">
 
-				<h3>Skills</h3>
+				<h3>skills</h3>
 				<!-- <p>Some things I tell myself I am good at.</p> -->
 
 				<ul class="skill-bars">
 					<li>
 						<div class="progress percent80"><span>80%</span></div>
-						<strong>Python</strong>
+						<strong>python</strong>
 					</li>
 					<li>
 						<div class="progress percent75"><span>75%</span></div>
-						<strong>JavaScript</strong>
+						<strong>javaScript</strong>
 					</li>
 					<li>
 						<div class="progress percent80"><span>80%</span></div>
-						<strong>Java</strong>
+						<strong>java</strong>
 					</li>
 					<li>
 						<div class="progress percent60"><span>60%</span></div>
-						<strong>C++</strong>
+						<strong>c++</strong>
 					</li>
 					<li>
 						<div class="progress percent85"><span>85%</span></div>
-						<strong>SQL</strong>
+						<strong>sql</strong>
 					</li>
 					<li>
 						<div class="progress percent80"><span>80%</span></div>
-						<strong>AWS</strong>
+						<strong>aws</strong>
 					</li>
 					<li>
 						<div class="progress percent70"><span>70%</span></div>
-						<strong>React</strong>
+						<strong>react</strong>
 					</li>
 				</ul> <!-- /skill-bars -->
 
@@ -200,9 +201,8 @@
 
 		<div class="row button-section">
 			<div class="col-twelve">
-				<a href="#contact" title="Get in Contact" class="button stroke smoothscroll">Get in Contact</a>
-				<a href="resume_cv_website.pdf" title="Download CV" class="button button-primary" target="_blank">Download
-					CV</a>
+				<a href="#contact" title="Get in Contact" class="button stroke smoothscroll">message me</a>
+				<a href="resume_cv_website.pdf" title="Download CV" class="button button-primary" target="_blank">download cv</a>
 			</div>
 		</div>
 
@@ -216,7 +216,7 @@
 		<div class="row section-intro">
 			<div class="col-twelve">
 
-				<h5>Resume</h5>
+				<h5>resume</h5>
 				<h1>some things i'm proud of.</h1>
 
 				<!--<p class="lead"></p>-->
@@ -928,7 +928,7 @@
 						</h3>
 
 						<h5 class="stat-title">
-							Lines of Code
+							lines of code
 						</h5>
 					</div> <!-- /stat -->
 
@@ -942,7 +942,7 @@
 						</h3>
 
 						<h5 class="stat-title">
-							Crazy Ideas
+							crazy ideas
 						</h5>
 					</div> <!-- /stat -->
 
@@ -956,7 +956,7 @@
 						</h3>
 
 						<h5 class="stat-title">
-							Coffee Cups
+							coffee cups
 						</h5>
 					</div> <!-- /stat -->
 
@@ -970,7 +970,7 @@
 						</h3>
 
 						<h5 class="stat-title">
-							Hours Worked
+							hours worked
 						</h5>
 					</div> <!-- /stat -->
 
@@ -984,7 +984,7 @@
 						</h3>
 
 						<h5 class="stat-title">
-							Awards
+							awards
 						</h5>
 					</div> <!-- /stat -->
 
@@ -998,7 +998,7 @@
 						</h3>
 
 						<h5 class="stat-title">
-							Days Until Graduation
+							days until graduation
 						</h5>
 					</div> <!-- /stat -->
 
@@ -1014,7 +1014,7 @@
 		<div class="row section-intro">
 			<div class="col-twelve">
 
-				<h5>Contact</h5>
+				<h5>contact</h5>
 				<h1>if u want to chat.</h1>
 
 				<p class="lead"></p>
@@ -1042,9 +1042,9 @@
 								required=""></textarea>
 						</div>
 						<div class="form-field">
-							<button class="submitform">Submit</button>
+							<button class="submitform">submit</button>
 							<div id="submit-loader">
-								<div class="text-loader">Sending...</div>
+								<div class="text-loader">sending...</div>
 								<div class="s-loader">
 									<div class="bounce1"></div>
 									<div class="bounce2"></div>
@@ -1072,7 +1072,7 @@
 					<i class="icon-pin"></i>
 				</div>
 
-				<h5>Where to find me</h5>
+				<h5>where to find me</h5>
 				<p>
 					330 Phillip St.<br>
 					Waterloo, ON<br>
@@ -1087,7 +1087,7 @@
 					<i class="icon-mail"></i>
 				</div>
 
-				<h5>Email Me At</h5>
+				<h5>email me</h5>
 
 				<p>matthew.kim919@gmail.com<br>
 					m234kim@edu.uwaterloo.ca
@@ -1101,7 +1101,7 @@
 					<i class="icon-phone"></i>
 				</div>
 
-				<h5>Call Me At</h5>
+				<h5>call me</h5>
 
 				<p>mobile: (+1) 647-707-1683</p>
 
