fixed profile and bg pics

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 				<h1>my tinder profile.</h1>
 
 				<div class="intro-info">
-					<img src="images/profile_pic.jpg" alt="profile picture">
+					<img src="images/profile-pic.jpg" alt="images/IMG_6196.jpg">
 
 					<p class="lead">"everything in the world has beauty, but not everyone can see."<br>
 						born in seoul, south korea. native of toronto.<br>
@@ -146,11 +146,15 @@
 					</li>
 					<li>
 						<strong>specialty:</strong>
-						<span>infrastructure; back-end</span>
+						<span>infrastructure<br>
+							back-end
+						</span>
 					</li>
 					<li>
 						<strong>email:</strong>
-						<span>matthew.kim919@gmail.com</span>
+						<span>matthew.kim919@gmail.com<br>
+							m234kim@uwaterloo.ca
+						</span>
 					</li>
 					<li>
 						<strong>linkedin:</strong>
@@ -1090,7 +1094,7 @@
 				<h5>email me</h5>
 
 				<p>matthew.kim919@gmail.com<br>
-					m234kim@edu.uwaterloo.ca
+					m234kim@uwaterloo.ca
 				</p>
 
 			</div>
