changed bg pic, resized profile pic

--- a/index.html
+++ b/index.html
@@ -140,8 +140,8 @@
 						<strong>education:</strong>
 						<span>candidate for BaSc, honours, computer engineering<br> 
 							university of waterloo<br>
-							expected april 2020<br>
-							president's scholarship
+							president's scholarship<br>
+							expected april 2020
 						</span>
 					</li>
 					<li>
